--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,27 @@
         android:theme="@style/Theme.StSiomeow"
         tools:targetApi="31">
         <activity
+            android:name=".UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".DeceasedProfile"
+            android:exported="false" />
+        <activity
+            android:name=".SendFlowers"
+            android:exported="false" />
+        <activity
+            android:name=".ImmediateNeedForm"
+            android:exported="false" />
+        <activity
+            android:name=".DeathArchive"
+            android:exported="false" />
+        <activity
+            android:name=".CremationProduct"
+            android:exported="false" />
+        <activity
+            android:name=".CoffinProduct"
+            android:exported="false" />
+        <activity
             android:name=".HomePage"
             android:exported="false" />
         <activity
