--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,28 +16,28 @@
         tools:targetApi="31">
         <activity
             android:name=".UserProfile"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".DeceasedProfile"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SendFlowers"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ImmediateNeedForm"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".DeathArchive"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".CremationProduct"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".CoffinProduct"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".HomePage"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Register"
             android:exported="true" />
